# tth-label-verify-demo

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  settings.py
backend/models/: __init__.py  label_fields.py  verification.py
backend/routers/: verify.py
backend/services/: grouping.py  matcher.py  preprocess.py  refine.py  storage.py  verify.py  warning.py
backend/services/readers/: base.py  ocr_reader.py  vlm_reader.py
deploy/vlm-ollama/: Dockerfile
deploy/vlm-vllm/: Dockerfile
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AcceptancePanel.tsx  AppMenu.tsx  ApplicationDataPane.tsx  BatchMapPanel.tsx  DecisionTab.tsx  DetailsContent.tsx  ExpectedFieldsForm.tsx  FieldRow.tsx  Flyout.tsx  GettingStarted.tsx  HelpGuide.tsx  Home.tsx  HotkeysHelp.tsx  ImageNoteLayer.tsx  IntakeScreen.tsx  OcrBoxOverlay.tsx  ProgressBar.tsx  QueueList.tsx  SelectOrCustom.tsx  SidePane.tsx  Splash.tsx  StagedFiles.tsx  StatusPill.tsx  TopBar.tsx  TriageBanner.tsx  VerdictOverlay.tsx  WarningCard.tsx  (+1 more)
scripts/: check_licenses.py
tests/: conftest.py  test_api_verify.py  test_check_licenses.py  test_event_loop.py  test_health.py  test_matcher.py  test_min_resolution.py  test_ocr_reader.py  test_pixel_cap.py  test_preprocess.py  test_refine.py  test_storage.py  test_verification_models.py  test_verify.py  test_vlm_reader.py  test_warning.py
tests/fixtures/: generate_label.py
(+17 files in other folders)
